fix alignment of battle-container

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,10 @@
 @import './base.css';
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #app {
   max-width: 1280px;
   font-weight: normal;
